--- a/2. EDA and Natural Language Analysis.ipynb
+++ b/2. EDA and Natural Language Analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Parte 2: Análise Exploratória de Dados e Processamento da Linguagem Natural"
+    "## Parte 2: Análise Exploratória de Dados e Processamento da Linguagem Natural"
    ]
   },
   {
@@ -75,21 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'analyzed_path' from 'config' (h:\\Meu Drive\\ESTRATEGIA\\Case-A3-Data\\ds-churn-challenge-nlp-llm\\config.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32mh:\\Meu Drive\\ESTRATEGIA\\Case-A3-Data\\ds-churn-challenge-nlp-llm\\2. EDA and Natural Language Analysis.ipynb Cell 4\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/ESTRATEGIA/Case-A3-Data/ds-churn-challenge-nlp-llm/2.%20EDA%20and%20Natural%20Language%20Analysis.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Importando configurações, paths e funções\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/ESTRATEGIA/Case-A3-Data/ds-churn-challenge-nlp-llm/2.%20EDA%20and%20Natural%20Language%20Analysis.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mconfig\u001b[39;00m \u001b[39mimport\u001b[39;00m processed_path, analyzed_path\n\u001b[0;32m      <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/ESTRATEGIA/Case-A3-Data/ds-churn-challenge-nlp-llm/2.%20EDA%20and%20Natural%20Language%20Analysis.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m differences_test_cat, differences_test_num, normality_test, predict_sentiment, textblob_sentiment_polarity, textblob_classify_polarity, textblob_subjectivity, bar_plot, boxplot_plot, simple_bar_plot, cramers_v\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'analyzed_path' from 'config' (h:\\Meu Drive\\ESTRATEGIA\\Case-A3-Data\\ds-churn-challenge-nlp-llm\\config.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importando configurações, paths e funções\n",
     "\n",
@@ -111,32 +99,38 @@
       "Collecting pt-core-news-sm==3.7.0\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.7.0/pt_core_news_sm-3.7.0-py3-none-any.whl (13.0 MB)\n",
       "     ---------------------------------------- 0.0/13.0 MB ? eta -:--:--\n",
-      "     ---------------------------------------- 0.1/13.0 MB 5.8 MB/s eta 0:00:03\n",
-      "      --------------------------------------- 0.3/13.0 MB 4.9 MB/s eta 0:00:03\n",
-      "     -- ------------------------------------- 0.8/13.0 MB 6.1 MB/s eta 0:00:02\n",
-      "     ---- ----------------------------------- 1.3/13.0 MB 7.5 MB/s eta 0:00:02\n",
-      "     ---- ----------------------------------- 1.3/13.0 MB 7.5 MB/s eta 0:00:02\n",
-      "     ---- ----------------------------------- 1.3/13.0 MB 7.5 MB/s eta 0:00:02\n",
-      "     -------- ------------------------------- 2.9/13.0 MB 8.9 MB/s eta 0:00:02\n",
-      "     --------- ------------------------------ 3.1/13.0 MB 9.1 MB/s eta 0:00:02\n",
-      "     ------------ --------------------------- 4.1/13.0 MB 9.7 MB/s eta 0:00:01\n",
-      "     -------------- ------------------------- 4.7/13.0 MB 10.0 MB/s eta 0:00:01\n",
-      "     ---------------- ----------------------- 5.4/13.0 MB 10.4 MB/s eta 0:00:01\n",
-      "     ------------------ --------------------- 6.0/13.0 MB 10.4 MB/s eta 0:00:01\n",
-      "     -------------------- ------------------- 6.6/13.0 MB 10.2 MB/s eta 0:00:01\n",
-      "     ---------------------- ----------------- 7.2/13.0 MB 10.4 MB/s eta 0:00:01\n",
-      "     ------------------------ --------------- 7.8/13.0 MB 10.6 MB/s eta 0:00:01\n",
-      "     ------------------------- -------------- 8.4/13.0 MB 10.7 MB/s eta 0:00:01\n",
-      "     --------------------------- ------------ 8.9/13.0 MB 10.8 MB/s eta 0:00:01\n",
-      "     ----------------------------- ---------- 9.5/13.0 MB 10.7 MB/s eta 0:00:01\n",
-      "     ------------------------------ -------- 10.1/13.0 MB 10.9 MB/s eta 0:00:01\n",
-      "     -------------------------------- ------ 10.7/13.0 MB 11.7 MB/s eta 0:00:01\n",
-      "     --------------------------------- ----- 11.3/13.0 MB 11.7 MB/s eta 0:00:01\n",
-      "     ----------------------------------- --- 11.8/13.0 MB 13.1 MB/s eta 0:00:01\n",
-      "     ------------------------------------ -- 12.2/13.0 MB 12.4 MB/s eta 0:00:01\n",
-      "     --------------------------------------  12.8/13.0 MB 12.1 MB/s eta 0:00:01\n",
-      "     --------------------------------------  13.0/13.0 MB 12.1 MB/s eta 0:00:01\n",
-      "     --------------------------------------- 13.0/13.0 MB 11.5 MB/s eta 0:00:00\n",
+      "     ---------------------------------------- 0.0/13.0 MB ? eta -:--:--\n",
+      "     ---------------------------------------- 0.0/13.0 MB ? eta -:--:--\n",
+      "     --------------------------------------- 0.0/13.0 MB 163.8 kB/s eta 0:01:20\n",
+      "     --------------------------------------- 0.0/13.0 MB 178.6 kB/s eta 0:01:13\n",
+      "     --------------------------------------- 0.1/13.0 MB 261.4 kB/s eta 0:00:50\n",
+      "      -------------------------------------- 0.2/13.0 MB 724.0 kB/s eta 0:00:18\n",
+      "     - -------------------------------------- 0.6/13.0 MB 1.5 MB/s eta 0:00:09\n",
+      "     -- ------------------------------------- 1.0/13.0 MB 2.4 MB/s eta 0:00:05\n",
+      "     ---- ----------------------------------- 1.4/13.0 MB 3.2 MB/s eta 0:00:04\n",
+      "     ------ --------------------------------- 2.2/13.0 MB 4.4 MB/s eta 0:00:03\n",
+      "     -------- ------------------------------- 2.7/13.0 MB 5.3 MB/s eta 0:00:02\n",
+      "     ---------- ----------------------------- 3.5/13.0 MB 5.8 MB/s eta 0:00:02\n",
+      "     ------------ --------------------------- 4.1/13.0 MB 6.2 MB/s eta 0:00:02\n",
+      "     -------------- ------------------------- 4.7/13.0 MB 6.7 MB/s eta 0:00:02\n",
+      "     ---------------- ----------------------- 5.2/13.0 MB 6.9 MB/s eta 0:00:02\n",
+      "     ----------------- ---------------------- 5.6/13.0 MB 7.2 MB/s eta 0:00:02\n",
+      "     ------------------- -------------------- 6.3/13.0 MB 7.4 MB/s eta 0:00:01\n",
+      "     --------------------- ------------------ 6.9/13.0 MB 7.7 MB/s eta 0:00:01\n",
+      "     ---------------------- ----------------- 7.5/13.0 MB 8.1 MB/s eta 0:00:01\n",
+      "     ------------------------ --------------- 8.0/13.0 MB 8.2 MB/s eta 0:00:01\n",
+      "     -------------------------- ------------- 8.7/13.0 MB 8.5 MB/s eta 0:00:01\n",
+      "     ---------------------------- ----------- 9.2/13.0 MB 8.4 MB/s eta 0:00:01\n",
+      "     ------------------------------ --------- 9.8/13.0 MB 8.7 MB/s eta 0:00:01\n",
+      "     ------------------------------- ------- 10.4/13.0 MB 11.3 MB/s eta 0:00:01\n",
+      "     --------------------------------- ----- 11.0/13.0 MB 11.9 MB/s eta 0:00:01\n",
+      "     ---------------------------------- ---- 11.6/13.0 MB 12.1 MB/s eta 0:00:01\n",
+      "     ------------------------------------ -- 12.2/13.0 MB 12.1 MB/s eta 0:00:01\n",
+      "     --------------------------------------  12.8/13.0 MB 11.7 MB/s eta 0:00:01\n",
+      "     --------------------------------------  13.0/13.0 MB 12.3 MB/s eta 0:00:01\n",
+      "     --------------------------------------  13.0/13.0 MB 12.3 MB/s eta 0:00:01\n",
+      "     --------------------------------------  13.0/13.0 MB 12.3 MB/s eta 0:00:01\n",
+      "     --------------------------------------- 13.0/13.0 MB 10.9 MB/s eta 0:00:00\n",
       "Requirement already satisfied: spacy<3.8.0,>=3.7.0 in c:\\users\\pedro\\.conda\\envs\\data-science\\lib\\site-packages (from pt-core-news-sm==3.7.0) (3.7.2)\n",
       "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in c:\\users\\pedro\\.conda\\envs\\data-science\\lib\\site-packages (from spacy<3.8.0,>=3.7.0->pt-core-news-sm==3.7.0) (3.0.12)\n",
       "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in c:\\users\\pedro\\.conda\\envs\\data-science\\lib\\site-packages (from spacy<3.8.0,>=3.7.0->pt-core-news-sm==3.7.0) (1.0.5)\n",
@@ -1524,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1630,7 +1624,7 @@
        "[114 rows x 2 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1652,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1712,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1792,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1812,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1867,7 @@
        "17                 POSITIVE                    POSITIVE"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1891,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1978,7 +1972,7 @@
        "6            duracao_contrato  1.000000e+00     True"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1991,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2018,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2045,7 +2039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2072,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2099,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2136,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2185,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2286,7 +2280,7 @@
        "8             flair_numerical  2.659970e-01        True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2312,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2354,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2448,7 +2442,7 @@
        "7                       churn  0.265997        True"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2472,7 +2466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2642,7 +2636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2721,7 +2715,7 @@
        "4        estado_sigla          0.921473  0.921460                   Não"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2822,7 +2816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
